--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,11 @@
 
   <name>medicine</name>
   <url>http://maven.apache.org</url>
-
+<scm>
+	<url>https://github.com/samith212324/git_repo.git</url>
+	<connection>scm:git:git://github.com/samith212324/git_repo.git</connection>
+	<developerConnection>scm:git:git@github.com:samith212324/git_repo.git</developerConnection>
+   </scm>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
@@ -22,6 +26,15 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+  <build>
+  <plugins>  
+  <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-release-plugin</artifactId>
+        <version>2.5.3</version>
+ </plugin>
+ </plugins>
+ </build> 
 
 <distributionManagement>
     <snapshotRepository>
@@ -29,5 +42,10 @@
         <name>DESKTOP-F23DK7G-snapshots</name>
         <url>http://localhost:8081/artifactory/libs-snapshot-local</url>
     </snapshotRepository>
+    <repository>
+        <id>central</id>
+        <name>DESKTOP-F23DK7G-releases</name>
+        <url>http://localhost:8081/artifactory/libs-release-local</url>
+    </repository>
 </distributionManagement>
 </project>
