--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
   <groupId>pharmacy</groupId>
   <artifactId>medicine</artifactId>
-  <version>1.1</version>
+  <version>1.2-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>medicine</name>
@@ -12,7 +12,7 @@
 	<url>https://github.com/samith212324/git_repo.git</url>
 	<connection>scm:git:git://github.com/samith212324/git_repo.git</connection>
 	<developerConnection>scm:git:git@github.com:samith212324/git_repo.git</developerConnection>
-     <tag>medicine-1.1</tag>
+     <tag>HEAD</tag>
   </scm>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
