--- a/a/opencart/pom.xml
+++ b/a/opencart/pom.xml
@@ -22,10 +22,11 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+  <distributionManagement>
   <snapshotRepository>
         <id>central</id>
         <name>DESKTOP-F23DK7G-snapshots</name>
         <url>http://localhost:8081/artifactory/libs-snapshot-local</url>
     </snapshotRepository>
-
+</distributionManagement>
 </project>
