--- a/a/opencart/pom.xml
+++ b/a/opencart/pom.xml
@@ -9,6 +9,12 @@
 
   <name>opencart</name>
   <url>http://maven.apache.org</url>
+  <scm>
+	<url>https://github.com/samith212324/git_repo.git</url>
+	<connection>scm:git:git://github.com/samith212324/git_repo.git</connection>
+	<developerConnection>scm:git:git@github.com:samith212324/git_repo.git</developerConnection>
+     <tag>HEAD</tag>
+  </scm>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
