--- a/a/opencart/pom.xml
+++ b/a/opencart/pom.xml
@@ -1,9 +1,10 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.in.oencart</groupId>
   <artifactId>opencart</artifactId>
-  <version>5</version>
+  <version>1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>opencart</name>
@@ -12,7 +13,7 @@
 	<url>https://github.com/samith212324/git_repo.git</url>
 	<connection>scm:git:git://github.com/samith212324/git_repo.git</connection>
 	<developerConnection>scm:git:git@github.com:samith212324/git_repo.git</developerConnection>
-     <tag>opencart-5</tag>
+     <tag>HEAD</tag>
   </scm>
 
   <properties>
@@ -27,15 +28,6 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
-  <build>
-  <plugins>  
-  <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-release-plugin</artifactId>
-        <version>2.5.3</version>
- </plugin>
- </plugins>
- </build> 
   <distributionManagement>
    <repository>
         <id>central</id>
