[maven-release-plugin] prepare release opencart-1.1

--- a/a/opencart/pom.xml
+++ b/a/opencart/pom.xml
@@ -1,10 +1,9 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.in.oencart</groupId>
   <artifactId>opencart</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.1</version>
   <packaging>jar</packaging>
 
   <name>opencart</name>
@@ -13,7 +12,7 @@
 	<url>https://github.com/samith212324/git_repo.git</url>
 	<connection>scm:git:git://github.com/samith212324/git_repo.git</connection>
 	<developerConnection>scm:git:git@github.com:samith212324/git_repo.git</developerConnection>
-     <tag>HEAD</tag>
+     <tag>opencart-1.1</tag>
   </scm>
 
   <properties>
