[maven-release-plugin] prepare for next development iteration

--- a/a/opencart/pom.xml
+++ b/a/opencart/pom.xml
@@ -3,7 +3,7 @@
 
   <groupId>com.in.oencart</groupId>
   <artifactId>opencart</artifactId>
-  <version>1.1</version>
+  <version>1.2-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>opencart</name>
@@ -12,7 +12,7 @@
 	<url>https://github.com/samith212324/git_repo.git</url>
 	<connection>scm:git:git://github.com/samith212324/git_repo.git</connection>
 	<developerConnection>scm:git:git@github.com:samith212324/git_repo.git</developerConnection>
-     <tag>opencart-1.1</tag>
+     <tag>HEAD</tag>
   </scm>
 
   <properties>
