--- a/a/opencart/pom.xml
+++ b/a/opencart/pom.xml
@@ -19,6 +19,12 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
+  <dependency>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>opencart</artifactId>
+    <version>2.6</version>
+</dependency>
+
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
